apply namespace to appproject

--- a/.bootstrap/appprojects.yaml
+++ b/.bootstrap/appprojects.yaml
@@ -3,6 +3,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: AppProject
 metadata:
   name: cluster-config
+  namespace: openshift-gitops
 spec:
   clusterResourceWhitelist:
   - group: '*'
@@ -17,6 +18,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: AppProject
 metadata:
   name: hub
+  namespace: openshift-gitops
 spec:
   clusterResourceWhitelist:
   - group: '*'
@@ -37,6 +39,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: AppProject
 metadata:
   name: virt
+  namespace: openshift-gitops
 spec:
   clusterResourceWhitelist:
   - group: '*'
