--- a/components/openshift-virtualization-instance/kustomization.yaml
+++ b/components/openshift-virtualization-instance/kustomization.yaml
@@ -4,6 +4,8 @@ kind: Kustomization
 resources:
   - hyper-converged.yaml
   - kubelet-config.yaml
-  - v2v-configmap.yaml
-  - service-account-patch.yaml  
-  - namespace.yaml
+  
+  # Migration related
+  # - v2v-configmap.yaml
+  # - service-account-patch.yaml
+  # - namespace.yaml
