--- a/components/openshift-virtualization-operator/kustomization.yaml
+++ b/components/openshift-virtualization-operator/kustomization.yaml
@@ -3,4 +3,6 @@ kind: Kustomization
 
 resources:
   - namespace.yaml
-  - operator-policy.yaml
+  - subscription.yaml
+# The following requires ACM
+#  - operator-policy.yaml
