--- a/components/openshift-virtualization-operator/kustomization.yaml
+++ b/components/openshift-virtualization-operator/kustomization.yaml
@@ -3,6 +3,5 @@ kind: Kustomization
 
 resources:
   - namespace.yaml
-  - subscription.yaml
-# The following requires ACM
-#  - operator-policy.yaml
+#  - subscription.yaml
+  - operator-policy.yaml
