add virt hyper-converged

--- a/clusters/cluster-r55l8/kustomization.yaml
+++ b/clusters/cluster-r55l8/kustomization.yaml
@@ -11,3 +11,4 @@ resources:
 
 # Virt
   - ../../apps/openshift-virtualization-operator.yaml
+  - ../../apps/openshift-virtualization-instance.yaml  
