--- a/clusters/cluster-r55l8/kustomization.yaml
+++ b/clusters/cluster-r55l8/kustomization.yaml
@@ -12,3 +12,5 @@ resources:
 # Virt
   - ../../apps/openshift-virtualization-operator.yaml
   - ../../apps/openshift-virtualization-instance.yaml  
+  - ../../apps/descheduler-operator.yaml
+  - ../../apps/descheduler-instance.yaml 
