temp fix for node-healthcheck-operator flapping

--- a/components/node-health-check-operator/nhc-operator-policy.yaml
+++ b/components/node-health-check-operator/nhc-operator-policy.yaml
@@ -7,7 +7,8 @@ spec:
   upgradeApproval: Automatic
   complianceConfig:
     catalogSourceUnhealthy: Compliant
-    deploymentsUnavailable: NonCompliant
+    #deploymentsUnavailable: NonCompliant
+    deploymentsUnavailable: Compliant
     upgradesAvailable: Compliant
   complianceType: musthave
   remediationAction: enforce
