--- a/components/node-health-check-operator/kustomization.yaml
+++ b/components/node-health-check-operator/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 
 resources:
   - namespace.yaml
-#  - far-operator-policy.yaml
+  - far-operator-policy.yaml
 #  - nhc-operator-policy.yaml
   - nm-operator-policy.yaml
   - snr-operator-policy.yaml
