--- a/components/node-health-check-configuration/kustomization.yaml
+++ b/components/node-health-check-configuration/kustomization.yaml
@@ -4,5 +4,5 @@ kind: Kustomization
 namespace: openshift-workload-availability
 
 resources:
-#- far-template.yaml
+- far-template.yaml
 # - node-health-check.yaml
