--- a/components/node-health-check-operator/nhc-operator-policy.yaml
+++ b/components/node-health-check-operator/nhc-operator-policy.yaml
@@ -7,8 +7,7 @@ spec:
   upgradeApproval: Automatic
   complianceConfig:
     catalogSourceUnhealthy: Compliant
-    #deploymentsUnavailable: NonCompliant
-    deploymentsUnavailable: Compliant
+    deploymentsUnavailable: NonCompliant
     upgradesAvailable: Compliant
   complianceType: musthave
   remediationAction: enforce
