--- a/apps/descheduler-operator.yaml
+++ b/apps/descheduler-operator.yaml
@@ -10,7 +10,7 @@ metadata:
 spec:
   destination:    
     server: https://kubernetes.default.svc
-  project: hub
+  project: virt
   source:
     path: components/descheduler-operator
     repoURL: https://github.com/mmwillingham/gitops-standards-repo
