replace nhc operatorpolicy with subscription

--- a/components/node-health-check-operator/kustomization.yaml
+++ b/components/node-health-check-operator/kustomization.yaml
@@ -4,6 +4,8 @@ kind: Kustomization
 resources:
   - namespace.yaml
   - far-operator-policy.yaml
-  - nhc-operator-policy.yaml
+# Use subscription instead of OperatorPolicy
+#  - nhc-operator-policy.yaml
+  - nhc-operator.yaml
   - nm-operator-policy.yaml
   - snr-operator-policy.yaml
