--- a/components/node-health-check-operator/nhc-operator.yaml
+++ b/components/node-health-check-operator/nhc-operator.yaml
@@ -1,9 +1,9 @@
 ---
-apiVersion: operators.coreos.com/v1
-kind: OperatorGroup
-metadata:
-  name: openshift-workload-availability
-  namespace: openshift-workload-availability
+# apiVersion: operators.coreos.com/v1
+# kind: OperatorGroup
+# metadata:
+#   name: openshift-workload-availability
+#   namespace: openshift-workload-availability
 ---
 apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
