--- a/.bootstrap/argocd.yaml
+++ b/.bootstrap/argocd.yaml
@@ -363,8 +363,8 @@ metadata:
   namespace: openshift-gitops
 data:
   KUSTOMIZE_PLUGIN_HOME: /etc/kustomize/plugin
-  CLUSTER_NAME: '${cluster_name}'
-  CLUSTER_BASE_DOMAIN: '${cluster_base_domain}'
+  CLUSTER_NAME: '${CLUSTER_NAME}'
+  CLUSTER_BASE_DOMAIN: '${CLUSTER_BASE_DOMAIN}'
           # all created clusters base domain should be <cluster-name>.<PLATFORM_BASE_DOMAIN> 
-  PLATFORM_BASE_DOMAIN: '${platform_base_domain}'
-  INFRA_GITOPS_REPO: '${gitops_repo}'        
+  PLATFORM_BASE_DOMAIN: '${PLATFORM_BASE_DOMAIN}'
+  INFRA_GITOPS_REPO: '${GITOPS_REPO}'        
