--- a/components/node-health-check-operator/kustomization.yaml
+++ b/components/node-health-check-operator/kustomization.yaml
@@ -4,8 +4,8 @@ kind: Kustomization
 resources:
   - namespace.yaml
   - far-operator-policy.yaml
-# Use subscription instead of OperatorPolicy
-#  - nhc-operator-policy.yaml
-  - nhc-operator.yaml
+# Use subscription or OperatorPolicy
+  - nhc-operator-policy.yaml
+#  - nhc-operator-subscription.yaml
   - nm-operator-policy.yaml
   - snr-operator-policy.yaml
