replace nhc operatorpolicy with subscription

--- a/components/node-health-check-operator/kustomization.yaml
+++ b/components/node-health-check-operator/kustomization.yaml
@@ -5,7 +5,7 @@ resources:
   - namespace.yaml
   - far-operator-policy.yaml
 # Use subscription or OperatorPolicy
-  - nhc-operator-policy.yaml
-#  - nhc-operator-subscription.yaml
+#  - nhc-operator-policy.yaml
+  - nhc-operator-subscription.yaml
   - nm-operator-policy.yaml
   - snr-operator-policy.yaml
