--- a/components/node-health-check-operator/kustomization.yaml
+++ b/components/node-health-check-operator/kustomization.yaml
@@ -6,6 +6,6 @@ resources:
   - far-operator-policy.yaml
 # Use subscription or OperatorPolicy
 #  - nhc-operator-policy.yaml
-  - nhc-operator-subscription.yaml
+#  - nhc-operator-subscription.yaml
   - nm-operator-policy.yaml
-  - snr-operator-policy.yaml
+#  - snr-operator-policy.yaml
