--- a/components/node-health-check-operator/nhc-operator-policy.yaml
+++ b/components/node-health-check-operator/nhc-operator-policy.yaml
@@ -4,7 +4,7 @@ metadata:
   name: node-healthcheck-operator
   namespace: open-cluster-management-policies
 spec:
-  upgradeApproval: Automatic
+  upgradeApproval: Manual
   complianceConfig:
     catalogSourceUnhealthy: Compliant
     deploymentsUnavailable: NonCompliant
