--- a/components/node-health-check-operator/far-operator-policy.yaml
+++ b/components/node-health-check-operator/far-operator-policy.yaml
@@ -4,7 +4,7 @@ metadata:
   name: fence-agents-remediation
   namespace: open-cluster-management-policies
 spec:
-  upgradeApproval: Manual
+  upgradeApproval: Automatic
   complianceConfig:
     catalogSourceUnhealthy: Compliant
     deploymentsUnavailable: NonCompliant
