--- a/components/node-health-check-operator/kustomization.yaml
+++ b/components/node-health-check-operator/kustomization.yaml
@@ -2,10 +2,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-#  - namespace.yaml
-#  - far-operator-policy.yaml
+  - namespace.yaml
+  - far-operator-policy.yaml
 # Use subscription or OperatorPolicy
 #  - nhc-operator-policy.yaml
-#  - nhc-operator-subscription.yaml
-#  - nm-operator-policy.yaml
+  - nhc-operator-subscription.yaml
+  - nm-operator-policy.yaml
 #  - snr-operator-policy.yaml
