remove versions and plugin from nhc-operator-policy

--- a/components/node-health-check-operator/nhc-operator-subscription.yaml
+++ b/components/node-health-check-operator/nhc-operator-subscription.yaml
@@ -15,4 +15,10 @@ spec:
   installPlanApproval: Automatic
   name: node-healthcheck-operator
   source: redhat-operators
-  sourceNamespace: openshift-marketplace  
+  sourceNamespace: openshift-marketplace
+  config:
+    env:
+      - name: CONSOLE_PLUGIN_IMAGE
+        value: "" # Setting the image to empty can prevent the plugin pod from starting
+      - name: ENABLE_CONSOLE_PLUGIN
+        value: "false"
