--- a/components/node-health-check-operator/kustomization.yaml
+++ b/components/node-health-check-operator/kustomization.yaml
@@ -3,9 +3,10 @@ kind: Kustomization
 
 resources:
   - namespace.yaml
-  - far-operator-policy.yaml
 # Use subscription or OperatorPolicy
-#  - nhc-operator-policy.yaml
-  - nhc-operator-subscription.yaml
+  - nhc-operator-policy.yaml
+#  - nhc-operator-subscription.yaml
+
+  - far-operator-policy.yaml
   - nm-operator-policy.yaml
 #  - snr-operator-policy.yaml
