--- a/components/node-health-check-operator/kustomization.yaml
+++ b/components/node-health-check-operator/kustomization.yaml
@@ -4,9 +4,9 @@ kind: Kustomization
 resources:
   - namespace.yaml
 # Use subscription or OperatorPolicy
-  - nhc-operator-policy.yaml
+#  - nhc-operator-policy.yaml
 #  - nhc-operator-subscription.yaml
 
-  - far-operator-policy.yaml
-  - nm-operator-policy.yaml
+#  - far-operator-policy.yaml
+#  - nm-operator-policy.yaml
 #  - snr-operator-policy.yaml
