--- a/components/descheduler-operator/operator-policy.yaml
+++ b/components/descheduler-operator/operator-policy.yaml
@@ -28,7 +28,8 @@ spec:
     namespace: openshift-kube-descheduler-operator
     source: redhat-operators
     sourceNamespace: openshift-marketplace
-    startingCSV: clusterkubedescheduleroperator.v5.3.2
+    startingCSV: clusterkubedescheduleroperator.v5.1.4
   versions: 
     - clusterkubedescheduleroperator.v5.3.2
     - clusterkubedescheduleroperator.v5.1.2
+    - clusterkubedescheduleroperator.v5.1.4
