--- a/components/openshift-virtualization-operator/operator-policy.yaml
+++ b/components/openshift-virtualization-operator/operator-policy.yaml
@@ -28,7 +28,7 @@ spec:
     namespace: openshift-cnv
     source: redhat-operators
     sourceNamespace: openshift-marketplace
-    startingCSV: kubevirt-hyperconverged-operator.v4.20.7
+    startingCSV: kubevirt-hyperconverged-operator.v4.18.29
   versions: 
     - kubevirt-hyperconverged-operator.v4.20.7
     - kubevirt-hyperconverged-operator.v4.20.3
@@ -37,3 +37,4 @@ spec:
     - kubevirt-hyperconverged-operator.v4.17.7
     - kubevirt-hyperconverged-operator.v4.18.1
     - kubevirt-hyperconverged-operator.v4.18.2
+    - kubevirt-hyperconverged-operator.v4.18.29
