--- a/clusters/cluster-khq2z/kustomization.yaml
+++ b/clusters/cluster-khq2z/kustomization.yaml
@@ -2,8 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-# Common
+# Default
   - ../../apps/kube-ops-view.yaml
+  - ../../apps/compliance-operator.yaml
 
 # Hub
   - ../../apps/acm-operator.yaml
