--- a/clusters/cluster-hqnl9/kustomization.yaml
+++ b/clusters/cluster-hqnl9/kustomization.yaml
@@ -21,7 +21,7 @@ resources:
 patches:
   - patch: |-
       - op: replace
-        path: /subscription/channel
+        path: /spec/subscription/channel
         value: 'stable'
     target:
       kind: OperatorPolicy
