--- a/clusters/cluster-hqnl9/kustomization.yaml
+++ b/clusters/cluster-hqnl9/kustomization.yaml
@@ -2,27 +2,44 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-# Default
-  - ../../apps/kube-ops-view.yaml
-  - ../../apps/compliance-operator.yaml
-
-# Hub
-#  - ../../apps/acm-operator.yaml
-#  - ../../apps/acm-configuration.yaml
-
-# Virt
-  - ../../apps/openshift-virtualization-operator.yaml
-  - ../../apps/openshift-virtualization-instance.yaml  
-  - ../../apps/descheduler-operator.yaml
-  - ../../apps/descheduler-configuration.yaml
-  #- ../../apps/node-health-check-operator.yaml
-  #- ../../apps/node-health-check-configuration.yaml
+  # Point to the actual logic/policy, not the App manifest
+  - ../../components/compliance-operator 
 
 patches:
-  - patch: |-
+  - target:
+      kind: OperatorPolicy
+      name: compliance-operator
+    patch: |-
       - op: replace
         path: /spec/subscription/channel
         value: 'stable'
-    target:
-      kind: OperatorPolicy
-      name: compliance-operator
+
+
+# apiVersion: kustomize.config.k8s.io/v1beta1
+# kind: Kustomization
+
+# resources:
+# # Default
+#   - ../../apps/kube-ops-view.yaml
+#   - ../../apps/compliance-operator.yaml
+
+# # Hub
+# #  - ../../apps/acm-operator.yaml
+# #  - ../../apps/acm-configuration.yaml
+
+# # Virt
+#   - ../../apps/openshift-virtualization-operator.yaml
+#   - ../../apps/openshift-virtualization-instance.yaml  
+#   - ../../apps/descheduler-operator.yaml
+#   - ../../apps/descheduler-configuration.yaml
+#   #- ../../apps/node-health-check-operator.yaml
+#   #- ../../apps/node-health-check-configuration.yaml
+
+# patches:
+#   - patch: |-
+#       - op: replace
+#         path: /spec/subscription/channel
+#         value: 'stable'
+#     target:
+#       kind: OperatorPolicy
+#       name: compliance-operator
