--- a/.bootstrap/root-application.yaml
+++ b/.bootstrap/root-application.yaml
@@ -8,7 +8,17 @@ spec:
   source:
     repoURL: https://github.com/mmwillingham/gitops-standards-repo
     targetRevision: HEAD
-    path: .bootstrap  # Point to where your root-app-set.yaml lives
+    path: clusters/cluster-hqnl9 # Points to the cluster "Shopping List"
   destination:
     server: https://kubernetes.default.svc
     namespace: openshift-gitops
+  syncPolicy:
+    automated: { prune: true, selfHeal: true }
+    syncOptions:
+    - CreateNamespace=true
+    retry:
+      limit: 5 # number of failed sync attempt retries; unlimited number of attempts if less than 0
+      backoff:
+        duration: 5s # the amount to back off. Default unit is seconds, but could also be a duration (e.g. "2m", "1h")
+        factor: 2 # a factor to multiply the base duration after each failed retry
+        maxDuration: 3m # the maximum amount of time allowed for the backoff strategy    
