--- a/clusters/cluster-hqnl9/external-secrets-app.yaml
+++ b/clusters/cluster-hqnl9/external-secrets-app.yaml
@@ -1,14 +1,14 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: external-secrets
+  name: external-secrets-operator
   namespace: openshift-gitops
 spec:
   project: cluster-config
   source:
     repoURL: https://github.com/mmwillingham/gitops-standards-repo
     targetRevision: HEAD
-    path: components/external-secrets
+    path: components/external-secrets-operator
   destination:
     server: https://kubernetes.default.svc
     namespace: openshift-operators
