add clusters and rename root-bootstrap to 0-root-bootstrap

--- a/bootstrap/root-application.yaml
+++ b/bootstrap/root-application.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: root-bootstrap
+  name: 0-root-bootstrap
   namespace: openshift-gitops
 spec:
   project: default
