--- a/clusters/cluster-hqnl9/kustomization.yaml
+++ b/clusters/cluster-hqnl9/kustomization.yaml
@@ -3,5 +3,5 @@ kind: Kustomization
 
 resources:
   - appprojects.yaml
-  - compliance-app.yaml
-  - external-secrets-app.yaml
+  - compliance-operator-app.yaml
+  - external-secrets-operator-app.yaml
