ocp virt operator

--- a/clusters/cluster-pq7kv/kustomization.yaml
+++ b/clusters/cluster-pq7kv/kustomization.yaml
@@ -6,3 +6,4 @@ resources:
   - compliance-operator-app.yaml
   - external-secrets-operator-app.yaml  
   - openshift-virtualization-instance-app.yaml
+  - openshift-virtualization-operator-app.yaml
