--- a/clusters/cluster-pq7kv/openshift-virtualization-operator/patches/patch-operator-policy.yaml
+++ b/clusters/cluster-pq7kv/openshift-virtualization-operator/patches/patch-operator-policy.yaml
@@ -1,9 +1,8 @@
-# clusters/mycluster/patches/compliance-patch.yaml
 apiVersion: policy.open-cluster-management.io/v1beta1
 kind: OperatorPolicy
 metadata:
-  name: compliance-operator
+  name: install-openshift-virtualization-operator
   namespace: open-cluster-management-policies
 spec:
   subscription:
-    channel: stable  # This overrides the "CHANNEL" placeholder in base
+    startingCSV: kubevirt-hyperconverged-operator.v4.20.7 
