--- a/components/openshift-virtualization-operator/operator-policy.yaml
+++ b/components/openshift-virtualization-operator/operator-policy.yaml
@@ -23,7 +23,7 @@ spec:
     namespace: openshift-cnv
     source: redhat-operators
     sourceNamespace: openshift-marketplace
-    startingCSV: kubevirt-hyperconverged-operator.v4.18.29
+    startingCSV: PATCHME
   versions: 
     - kubevirt-hyperconverged-operator.v4.20.7
     - kubevirt-hyperconverged-operator.v4.20.3
