--- a/clusters/cluster-pq7kv/compliance-operator/kustomization.yaml
+++ b/clusters/cluster-pq7kv/compliance-operator/kustomization.yaml
@@ -5,5 +5,5 @@ resources:
   - ../../../components/compliance-operator
 
 patches:
-  - path: patches/patch-operator-policy
+  - path: patches/patch-operator-policy.yaml
 
