add OG to ocp virt operatorpolicy

--- a/components/openshift-virtualization-operator/operator-policy.yaml
+++ b/components/openshift-virtualization-operator/operator-policy.yaml
@@ -17,6 +17,11 @@ spec:
     customResourceDefinitions: Keep
     operatorGroups: DeleteIfUnused
     subscriptions: Delete
+  operatorGroup:
+    name: openshift-virtualization-og
+    namespace: openshift-cnv
+    targetNamespaces:
+      - openshift-cnv    
   subscription:
     channel: stable
     name: kubevirt-hyperconverged
