add finalizer to enable cascade deletion of apps

--- a/clusters/cluster-pq7kv/openshift-virtualization-operator-app.yaml
+++ b/clusters/cluster-pq7kv/openshift-virtualization-operator-app.yaml
@@ -3,6 +3,8 @@ kind: Application
 metadata:
   name: openshift-virtualization-operator
   namespace: openshift-gitops
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io  
 spec:
   project: cluster-config
   source:
