--- a/clusters/cluster-8qp82/compliance-operator-app.yaml
+++ b/clusters/cluster-8qp82/compliance-operator-app.yaml
@@ -3,6 +3,8 @@ kind: Application
 metadata:
   name: compliance-operator
   namespace: openshift-gitops
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io    
 spec:
   project: cluster-config
   source:
