--- a/clusters/cluster-pq7kv/openshift-virtualization-instance-app.yaml
+++ b/clusters/cluster-pq7kv/openshift-virtualization-instance-app.yaml
@@ -3,6 +3,8 @@ kind: Application
 metadata:
   name: openshift-virtualization-instance
   namespace: openshift-gitops
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io    
 spec:
   project: cluster-config
   source:
