--- a/components/compliance-operator/operator-policy.yaml
+++ b/components/compliance-operator/operator-policy.yaml
@@ -21,6 +21,7 @@ spec:
     channel: CHANNEL # This is the placeholder we will patch
     name: compliance-operator
     namespace: openshift-compliance
+    installPlanApproval: Automatic
     source: redhat-operators
     sourceNamespace: openshift-marketplace
     startingCSV: compliance-operator.v1.8.2
