--- a/components/openshift-virtualization-operator/operator-policy.yaml
+++ b/components/openshift-virtualization-operator/operator-policy.yaml
@@ -26,6 +26,7 @@ spec:
     channel: stable
     name: kubevirt-hyperconverged
     namespace: openshift-cnv
+    installPlanApproval: Automatic
     source: redhat-operators
     sourceNamespace: openshift-marketplace
     startingCSV: PATCHME
