--- a/clusters/cluster-pq7kv/compliance-operator-app.yaml
+++ b/clusters/cluster-pq7kv/compliance-operator-app.yaml
@@ -3,6 +3,8 @@ kind: Application
 metadata:
   name: compliance-operator
   namespace: openshift-gitops
+  annotations:
+    argocd.argoproj.io/sync-wave: "0"  
 spec:
   project: cluster-config
   source:
