--- a/clusters/cluster-pq7kv/openshift-virtualization-instance-app.yaml
+++ b/clusters/cluster-pq7kv/openshift-virtualization-instance-app.yaml
@@ -18,7 +18,7 @@ spec:
     path: components/openshift-virtualization-instance
   destination:
     server: https://kubernetes.default.svc
-    namespace: openshift-cnv
+    namespace: open-cluster-management-policies
   syncPolicy:
     automated: { prune: true, selfHeal: true }
     retry:
