--- a/components/openshift-virtualization-instance/hyperconverged.yaml
+++ b/components/openshift-virtualization-instance/hyperconverged.yaml
@@ -1,58 +1,53 @@
-apiVersion: policy.open-cluster-management.io/v1
-kind: ConfigurationPolicy
+apiVersion: hco.kubevirt.io/v1beta1
+kind: HyperConverged
 metadata:
-  name: virt-hyperconverged
+  name: kubevirt-hyperconverged
+  annotations:
+    deployOVS: 'false'
+  namespace: openshift-cnv
 spec:
-  remediationAction: enforce
-  severity: high
-  object-templates:
-    - complianceType: mustonlyhave
-      objectDefinition:
-        apiVersion: hco.kubevirt.io/v1beta1
-        kind: HyperConverged
-        metadata:
-          name: kubevirt-hyperconverged
-          annotations:
-            deployOVS: 'false'
-          namespace: openshift-cnv
-        spec:
-          virtualMachineOptions:
-            disableFreePageReporting: false
-            disableSerialConsoleLog: true
-          higherWorkloadDensity:
-            memoryOvercommitPercentage: 100
-          liveMigrationConfig:
-            allowAutoConverge: false
-            allowPostCopy: false
-            completionTimeoutPerGiB: 150
-            parallelMigrationsPerCluster: 5
-            parallelOutboundMigrationsPerNode: 2
-            progressTimeout: 150
-          certConfig:
-            ca:
-              duration: 48h0m0s
-              renewBefore: 24h0m0s
-            server:
-              duration: 24h0m0s
-              renewBefore: 12h0m0s
-          applicationAwareConfig:
-            allowApplicationAwareClusterResourceQuota: false
-            vmiCalcConfigName: DedicatedVirtualResources
-          featureGates:
-            enableCommonBootImageImport: true
-            downwardMetrics: false
-            disableMDevConfiguration: false
-            enableApplicationAwareQuota: false
-            deployKubeSecondaryDNS: false
-            alignCPUs: false
-            deployVmConsoleProxy: false
-            persistentReservation: false
-            autoResourceLimits: false
-          workloadUpdateStrategy:
-            batchEvictionInterval: 1m0s
-            batchEvictionSize: 10
-            workloadUpdateMethods:
-              - LiveMigrate
-          uninstallStrategy: BlockUninstallIfWorkloadsExist
-          resourceRequirements:
-            vmiCPUAllocationRatio: 10
+#  vddkInitImage: quay.io/raffaelespazzoli/vddk:v8.0.3
+  tuningPolicy: highBurst
+  higherWorkloadDensity:
+    memoryOvercommitPercentage: 400
+  virtualMachineOptions:
+    disableFreePageReporting: false
+    disableSerialConsoleLog: true
+  liveMigrationConfig:
+    allowAutoConverge: false
+    allowPostCopy: false
+    completionTimeoutPerGiB: 800
+    parallelMigrationsPerCluster: 5
+    parallelOutboundMigrationsPerNode: 2
+    progressTimeout: 150
+  certConfig:
+    ca:
+      duration: 48h0m0s
+      renewBefore: 24h0m0s
+    server:
+      duration: 24h0m0s
+      renewBefore: 12h0m0s
+  applicationAwareConfig:
+    allowApplicationAwareClusterResourceQuota: false
+    vmiCalcConfigName: DedicatedVirtualResources
+  featureGates:
+    deployTektonTaskResources: false
+    enableCommonBootImageImport: true
+    withHostPassthroughCPU: false
+    disableMDevConfiguration: false
+    enableApplicationAwareQuota: false
+    deployKubeSecondaryDNS: false
+    nonRoot: true
+    alignCPUs: false
+    enableManagedTenantQuota: false
+    deployVmConsoleProxy: false
+    persistentReservation: true
+    autoResourceLimits: false
+  workloadUpdateStrategy:
+    batchEvictionInterval: 1m0s
+    batchEvictionSize: 10
+    workloadUpdateMethods:
+      - LiveMigrate
+  uninstallStrategy: BlockUninstallIfWorkloadsExist
+  resourceRequirements:
+    vmiCPUAllocationRatio: 10
