--- a/clusters/cluster-pq7kv/kustomization.yaml
+++ b/clusters/cluster-pq7kv/kustomization.yaml
@@ -7,3 +7,4 @@ resources:
   - external-secrets-operator-app.yaml
   - openshift-virtualization-instance-app.yaml
   - openshift-virtualization-operator-app.yaml
+  - node-healthcheck-operator-app.yaml
