--- a/clusters/cluster-pq7kv/node-health-check-operator/patches/patch-operator-policy.yaml
+++ b/clusters/cluster-pq7kv/node-health-check-operator/patches/patch-operator-policy.yaml
@@ -1,8 +1,8 @@
 apiVersion: policy.open-cluster-management.io/v1beta1
 kind: OperatorPolicy
 metadata:
-  name: compliance-operator
+  name: node-health-check-operator
   namespace: open-cluster-management-policies
 spec:
   subscription:
-    channel: stable  # This overrides the "CHANNEL" placeholder in base
+    startingCSV: node-healthcheck-operator.v0.10.1
