--- a/components/node-health-check-operator/namespace.yaml
+++ b/components/node-health-check-operator/namespace.yaml
@@ -2,9 +2,9 @@ apiVersion: v1
 kind: Namespace
 metadata:
   annotations:
-    openshift.io/display-name: OpenShift Compliance Operator
     argocd.argoproj.io/sync-options: Delete=false
   labels:
+    kubernetes.io/metadata.name: openshift-workload-availability
     openshift.io/cluster-monitoring: "true"
     argocd.argoproj.io/managed-by: openshift-gitops
-  name: openshift-compliance
+  name: openshift-workload-availability
