--- a/clusters/cluster-pq7kv/kustomization.yaml
+++ b/clusters/cluster-pq7kv/kustomization.yaml
@@ -3,8 +3,10 @@ kind: Kustomization
 
 resources:
   - appprojects.yaml
+  - cluster-standards-app.yaml
   - compliance-operator-app.yaml
   - external-secrets-operator-app.yaml
   - openshift-virtualization-instance-app.yaml
   - openshift-virtualization-operator-app.yaml
   - node-healthcheck-operator-app.yaml
+
