--- a/clusters/cluster-pq7kv/kustomization.yaml
+++ b/clusters/cluster-pq7kv/kustomization.yaml
@@ -9,4 +9,5 @@ resources:
   - openshift-virtualization-instance-app.yaml
   - openshift-virtualization-operator-app.yaml
   - node-health-operators-app.yaml
+  - node-health-instances-app.yaml
 
