--- a/components/node-health-operators/kustomization.yaml
+++ b/components/node-health-operators/kustomization.yaml
@@ -2,9 +2,13 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
+  
+  - nhc-far-template-reader-binding.yaml
+  - nhc-far-template-reader-cluster-role.yaml
   - namespace.yaml
   - node-healthcheck-operator.yaml
   - node-maintenance-operator.yaml
+
 
 # Detect node failure
 # Hardware based (better for bare metal on-prem)
