typo in acm apps

--- a/clusters/cluster-8qp82/kustomization.yaml
+++ b/clusters/cluster-8qp82/kustomization.yaml
@@ -3,8 +3,8 @@ kind: Kustomization
 
 resources:
   - appprojects.yaml
-  - acm-operator.yaml
-  - acm-instance.yaml
+  - acm-operator-app.yaml
+  - acm-instance-app.yaml
   - cluster-standards-app.yaml
   # - compliance-operator-app.yaml
   # - external-secrets-operator-app.yaml
