fix operator groups, namespaces, versions, manual instead of auto

--- a/OLD components/openshift-virtualization-operator/operator-policy.yaml
+++ b/OLD components/openshift-virtualization-operator/operator-policy.yaml
@@ -4,7 +4,7 @@ metadata:
   name: kubevirt-hyperconverged
   namespace: open-cluster-management-policies
 spec:
-  upgradeApproval: Automatic
+  upgradeApproval: Manual
   complianceConfig:
     catalogSourceUnhealthy: Compliant
     deploymentsUnavailable: NonCompliant
