--- a/components/node-health-operators/fence-agents-remediation-operator.yaml
+++ b/components/node-health-operators/fence-agents-remediation-operator.yaml
@@ -4,7 +4,7 @@ metadata:
   name: fence-agents-remediation-operator
   namespace: open-cluster-management-policies
 spec:
-  upgradeApproval: Automatic
+  upgradeApproval: Manual
   complianceConfig:
     catalogSourceUnhealthy: Compliant
     deploymentsUnavailable: NonCompliant
@@ -25,3 +25,5 @@ spec:
     sourceNamespace: openshift-marketplace
 #    startingCSV: fence-agents-remediation.v0.6.0
     startingCSV: PATCHME
+  versions: 
+    - fence-agents-remediation.v0.6.0    
