--- a/components/node-health-operators/kustomization.yaml
+++ b/components/node-health-operators/kustomization.yaml
@@ -3,13 +3,13 @@ kind: Kustomization
 
 resources:
   
+  - namespace.yaml
+  - node-health-operatorgroup.yaml
   - nhc-far-template-reader-binding.yaml
   - nhc-far-template-reader-cluster-role.yaml
-  - namespace.yaml
   - node-healthcheck-operator.yaml
   - node-maintenance-operator.yaml
-
-
+  
 # Detect node failure
 # Hardware based (better for bare metal on-prem)
   - fence-agents-remediation-operator.yaml
