--- a/components/node-health-operators/node-healthcheck-operator.yaml
+++ b/components/node-health-operators/node-healthcheck-operator.yaml
@@ -4,7 +4,7 @@ metadata:
   name: node-healthcheck-operator
   namespace: open-cluster-management-policies
 spec:
-  upgradeApproval: Automatic
+  upgradeApproval: Manual
   complianceConfig:
     catalogSourceUnhealthy: Compliant
     deploymentsUnavailable: NonCompliant
@@ -25,6 +25,8 @@ spec:
     sourceNamespace: openshift-marketplace
     #startingCSV: node-healthcheck-operator.v0.10.1
     startingCSV: PATCHME
+  versions: 
+    - node-healthcheck-operator.v0.10.1    
 ---
 # This removes the troublesome plugin
 # apiVersion: policy.open-cluster-management.io/v1
