--- a/components/node-health-operators/self-node-remediation-operator.yaml
+++ b/components/node-health-operators/self-node-remediation-operator.yaml
@@ -4,7 +4,7 @@ metadata:
   name: self-node-remediation-operator
   namespace: open-cluster-management-policies
 spec:
-  upgradeApproval: Automatic
+  upgradeApproval: Manual
   complianceConfig:
     catalogSourceUnhealthy: Compliant
     deploymentsUnavailable: NonCompliant
