--- a/components/openshift-virtualization-operator/openshift-virtualization-operator.yaml
+++ b/components/openshift-virtualization-operator/openshift-virtualization-operator.yaml
@@ -7,7 +7,7 @@ spec:
   remediationAction: enforce
   severity: high
   complianceType: musthave
-  upgradeApproval: Automatic
+  upgradeApproval: Manual
   complianceConfig:
     catalogSourceUnhealthy: Compliant
     deploymentsUnavailable: NonCompliant
