--- a/templates/TEMPLATE-operator-policy.yaml
+++ b/templates/TEMPLATE-operator-policy.yaml
@@ -7,7 +7,7 @@ spec:
   remediationAction: enforce
   severity: medium
   complianceType: musthave
-  upgradeApproval: Automatic
+  upgradeApproval: Manual
   complianceConfig:
     catalogSourceUnhealthy: Compliant
     deploymentsUnavailable: NonCompliant
@@ -34,7 +34,7 @@ spec:
     source: redhat-operators
     sourceNamespace: openshift-marketplace
     startingCSV: STARTING-CSV # For example: compliance-operator.v1.8.2
-  # versions:
-  #   - LIST OF ALLOWED CSV VERSIONS. For example:
-  #   - compliance-operator.v1.8.2
-  #   - compliance-operator.v1.8.1
+  versions:
+  #   - LIST OF ALLOWED CSV VERSIONS. Identify with: oc get packagemanifest. Example:
+    - compliance-operator.v1.8.2
+    - compliance-operator.v1.8.1
