--- a/clusters/cluster-pq7kv/kustomization.yaml
+++ b/clusters/cluster-pq7kv/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 resources:
   - appprojects.yaml
   - cluster-standards-app.yaml
-  - compliance-operator-app.yaml
+#  - compliance-operator-app.yaml
   - external-secrets-operator-app.yaml
   - openshift-virtualization-instance-app.yaml
   - openshift-virtualization-operator-app.yaml
