--- a/clusters/cluster-pq7kv/kustomization.yaml
+++ b/clusters/cluster-pq7kv/kustomization.yaml
@@ -4,10 +4,10 @@ kind: Kustomization
 resources:
   - appprojects.yaml
   - cluster-standards-app.yaml
-#  - compliance-operator-app.yaml
-  - external-secrets-operator-app.yaml
   - openshift-virtualization-instance-app.yaml
   - openshift-virtualization-operator-app.yaml
-  - node-health-operators-app.yaml
-  - node-health-instances-app.yaml
+  # - compliance-operator-app.yaml
+  # - external-secrets-operator-app.yaml
+  # - node-health-operators-app.yaml
+  # - node-health-instances-app.yaml
 
