--- a/components/compliance-operator/compliance-operator.yaml
+++ b/components/compliance-operator/compliance-operator.yaml
@@ -7,7 +7,7 @@ spec:
   remediationAction: enforce
   severity: medium
   complianceType: musthave
-  upgradeApproval: Manual
+  upgradeApproval: Automatic
   complianceConfig:
     catalogSourceUnhealthy: Compliant
     deploymentsUnavailable: NonCompliant
