--- a/components/node-health-operators/node-maintenance-operator.yaml
+++ b/components/node-health-operators/node-maintenance-operator.yaml
@@ -4,7 +4,7 @@ metadata:
   name: node-maintenance-operator
   namespace: open-cluster-management-policies
 spec:
-  upgradeApproval: Manual
+  upgradeApproval: Automatic
   complianceConfig:
     catalogSourceUnhealthy: Compliant
     deploymentsUnavailable: NonCompliant
