--- a/templates/TEMPLATE-operator-policy.yaml
+++ b/templates/TEMPLATE-operator-policy.yaml
@@ -7,7 +7,7 @@ spec:
   remediationAction: enforce
   severity: medium
   complianceType: musthave
-  upgradeApproval: Manual
+  upgradeApproval: Automatic
   complianceConfig:
     catalogSourceUnhealthy: Compliant
     deploymentsUnavailable: NonCompliant
