reenable ops on 2nd

--- a/clusters/cluster-pq7kv/kustomization.yaml
+++ b/clusters/cluster-pq7kv/kustomization.yaml
@@ -6,8 +6,8 @@ resources:
   - cluster-standards-app.yaml
   - openshift-virtualization-instance-app.yaml
   - openshift-virtualization-operator-app.yaml
-  # - compliance-operator-app.yaml
-  # - external-secrets-operator-app.yaml
-  # - node-health-operators-app.yaml
-  # - node-health-instances-app.yaml
+  - compliance-operator-app.yaml
+  - external-secrets-operator-app.yaml
+  - node-health-operators-app.yaml
+  - node-health-instances-app.yaml
 
