--- a/components/external-secrets-operator/external-secrets-operator.yaml
+++ b/components/external-secrets-operator/external-secrets-operator.yaml
@@ -27,7 +27,7 @@ spec:
     targetNamespaces:
       - external-secrets-operator
   subscription:
-    channel: stable # This is the placeholder we will patch
+    channel: CHANNEL # This is the placeholder we will patch
     name: external-secrets-operator
     namespace: external-secrets-operator
     source: redhat-operators
