--- a/components/node-health-operators/node-health-operatorgroup.yaml
+++ b/components/node-health-operators/node-health-operatorgroup.yaml
@@ -1,4 +1,4 @@
-apiVersion: policy.open-cluster-management.io/v1
+apiVersion: policy.open-cluster-management.io/v1beta
 kind: OperatorPolicy
 metadata:
   name: openshift-workload-availability
