--- a/components/node-health-operators/node-health-operatorgroup.yaml
+++ b/components/node-health-operators/node-health-operatorgroup.yaml
@@ -1,12 +1,19 @@
-apiVersion: policy.open-cluster-management.io/v1beta1
-kind: OperatorPolicy
+apiVersion: policy.open-cluster-management.io/v1
+kind: ConfigurationPolicy
 metadata:
-  name: openshift-workload-availability
+  name: shared-workload-availability
+  namespace: open-cluster-management-policies
 spec:
   remediationAction: enforce
-  complianceType: musthave
-  operatorGroup:
-    name: shared-workload-availability
-    namespace: openshift-workload-availability
-    targetNamespaces:
-      - openshift-workload-availability
+  severity: low
+  object-templates:
+    - complianceType: musthave
+      objectDefinition:
+        apiVersion: operators.coreos.com/v1
+        kind: OperatorGroup
+        metadata:
+          name: shared-workload-availability
+          namespace: openshift-workload-availability
+        spec:
+          targetNamespaces:
+            - openshift-workload-availability
