reenable node health

--- a/clusters/cluster-pq7kv/kustomization.yaml
+++ b/clusters/cluster-pq7kv/kustomization.yaml
@@ -8,6 +8,6 @@ resources:
   - openshift-virtualization-operator-app.yaml
 #  - compliance-operator-app.yaml
 #  - external-secrets-operator-app.yaml
-  # - node-health-operators-app.yaml
-  # - node-health-instances-app.yaml
+  - node-health-operators-app.yaml
+  - node-health-instances-app.yaml
 
