--- a/components/node-health-operators/node-health-operatorgroup.yaml
+++ b/components/node-health-operators/node-health-operatorgroup.yaml
@@ -3,6 +3,8 @@ kind: ConfigurationPolicy
 metadata:
   name: shared-workload-availability
   namespace: open-cluster-management-policies
+  annotations:
+    argocd.argoproj.io/sync-wave: "1" # This should be created before the operators
 spec:
   remediationAction: enforce
   severity: low
