--- a/components/node-health-operators/node-maintenance-operator.yaml
+++ b/components/node-health-operators/node-maintenance-operator.yaml
@@ -3,6 +3,8 @@ kind: OperatorPolicy
 metadata:
   name: node-maintenance-operator
   namespace: open-cluster-management-policies
+  annotations:
+    argocd.argoproj.io/sync-wave: "1" # This should be created after the operator group
 spec:
   upgradeApproval: Automatic
   complianceConfig:
