--- a/components/node-health-operators/self-node-remediation-operator.yaml
+++ b/components/node-health-operators/self-node-remediation-operator.yaml
@@ -3,6 +3,8 @@ kind: OperatorPolicy
 metadata:
   name: self-node-remediation-operator
   namespace: open-cluster-management-policies
+  annotations:
+    argocd.argoproj.io/sync-wave: "5" # This should be created after the operator group
 spec:
   upgradeApproval: Automatic
   complianceConfig:
